Fixed height for toolbar.css
Please make sure to keep the toolbar height set to at least 10% if you set it to 15% it covers the titles and most of the sign in page.

--- a/src/components/toolbar/Toolbar.css
+++ b/src/components/toolbar/Toolbar.css
@@ -2,7 +2,7 @@
   padding: 5px;
   position: fixed;
   top:0px;
-  height: 15%;
+  height: 10%;
   width: 100%;
   display: flex;
   align-items: center;
